# ailess-cli

./: .gitignore  LICENSE  MANIFEST.in  developing.md  pyproject.toml  readme.md
ailess/: __init__.py  __main__.py  aws_utils.py  cli.py
ailess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ailess/modules/: aws_utils.py  cli_utils.py  config_utils.py  docker_utils.py  env_utils.py  python_utils.py  terraform_utils.py
ailess/modules/docker_searchers/: __init__.py  python_basic.py  pytorch_amd64_nvidia.py  tensorflow_amd64.py  tensorflow_amd64_nvidia.py
ailess/modules/terraform/: cluster.tf  iam_policy.json
