[project]
name = "ailess"
version = "0.1.0"

dependencies = [
    "typer >= 0.9.0",
    "inquirer >= 3.1.3",
    "boto3 >= 1.26.146",
    "yaspin >= 2.3.0",
    "pipreqs >= 0.4.13",
    "docker >= 6.1.3",
]

[project.scripts]
ailess = "ailess.cli:app"

[project.files]
included-files = ["ailess/modules/terraform/cluster.tf"]
