[tool.poetry]
name = "ailess"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "ailess"}]
authors = ["ailess.dev team <contact@ailess.dev>"]
include = ["ailess/modules/terraform/cluster.tf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

dependencies = [
    "typer >= 0.9.0",
    "inquirer >= 3.1.3",
    "boto3 >= 1.26.146",
    "yaspin >= 2.3.0",
    "pipreqs >= 0.4.13",
    "docker >= 6.1.3",
]

[project.scripts]
ailess = "ailess.cli:app"
